fix word breaks in tables

--- a/ctrack/art/high/ctrack.css
+++ b/ctrack/art/high/ctrack.css
@@ -452,7 +452,7 @@ table.stats td			{background-color:#FFF; padding:0px; vertical-align:top;}
 
 /*	Table for Active / Ended projects
 	============================================= */
-table.list				{width:100%; border-collapse:collapse;}
+table.list				{width:100%; border-collapse:collapse; word-break:break-word;}
 table.list td			{color:#000; font-size:1.25em; line-height:1.35em; word-spacing:0.7px; padding:20px 0; vertical-align:top; border-bottom:1px solid #000;}
 table.list tr:last-child td	{border:0; padding-bottom:20px;}
 table.list tr:hover		{background-color:E9E9E9;}
@@ -537,7 +537,7 @@ table.money.publishers th.col2	{border-top:1px solid #000;}
 
 /*	Table for Activities list (Donors / Sectors)
 	============================================= */
-table.activity			{width:100%; border-collapse:collapse;}
+table.activity			{width:100%; border-collapse:collapse; word-break:break-word;}
 table.activity td		{color:#000; font-size:1.25em; line-height:1.0em; word-spacing:0.7px; padding:10px 20px; vertical-align:top; border-bottom:1px solid #000; box-sizing:border-box;}
 table.activity th:hover	{cursor:default;}
 table.activity tr:last-child td	{border:0;}
